Change the name of the update button.

--- a/index.start.html
+++ b/index.start.html
@@ -74,7 +74,7 @@
                                 <label>Bookmark URL</label>
                                 <input type="text" class="form-control" ng-model="editedBookmark.url" placeholder="Enter URL">
                             </div>
-                            <button type="submit" class="btn btn-info btn-lg">Create</button>
+                            <button type="submit" class="btn btn-info btn-lg">Update</button>
                             <button type="button" class="btn btn-default btn-lg pull-right" ng-click="cancelEditing()">Cancel</button>
                         </form>
                         
